--- a/login_project/login.html
+++ b/login_project/login.html
@@ -14,7 +14,7 @@
 				<div class="form_header">Please Login:</div>
                 <form>
 					<input type="text" class="txt" id="uname" placeholder="Username or Email"></input><br>
-					<input type="password" class="txt" id="pass" placehoslder="Password"></input><br>
+					<input type="password" class="txt" id="pass" placeholder="Password"></input><br>
 					<input type="checkbox" class="chk" id="remember" value="remmeber" checked><span class="rem">Remember me on this computer.</span></input>
 					<button type="button" class="btn">Login </button>
 				</form>
