--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -51,6 +51,15 @@
                   </nav>
             <!--/navbar -->
 
+            <!--jumbotron -->
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Fluid jumbotron</h1>
+                  <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                </div>
+              </div>
+            <!--/jumbotron -->
+
 
         </div>
         <!-- /Content here -->
