--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -52,12 +52,12 @@
             <!--/navbar -->
 
             <!--jumbotron -->
-            <div class="jumbotron jumbotron-fluid">
+            <div class="jumbotron jumbotron-fluid text-center bg-info">
                 <div class="container">
-                  <h1 class="display-4">Fluid jumbotron</h1>
-                  <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                  <h1 class="display-2">Academy Cinemas</h1>
+                  <p class="lead">People Definitely Still Go to Movie Theaters</p>
                 </div>
-              </div>
+            </div>
             <!--/jumbotron -->
 
 
