--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -60,6 +60,22 @@
             </div>
             <!--/jumbotron -->
 
+            <!--main content -->
+            <div class="container">
+                <div class="row">
+                  <div class="col">
+                    1 of 3
+                  </div>
+                  <div class="col">
+                    2 of 3
+                  </div>
+                  <div class="col">
+                    3 of 3
+                  </div>
+                </div>
+              </div>
+            <!--/main content -->
+
 
         </div>
         <!-- /Content here -->
