rows and columns edited

--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -54,7 +54,7 @@
             <!--jumbotron -->
             <div class="jumbotron jumbotron-fluid text-center bg-info">
                 <div class="container">
-                  <h1 class="display-2">Academy Cinemas</h1>
+                  <h1 class="display-3">Academy Cinemas</h1>
                   <p class="lead">People Definitely Still Go to Movie Theaters</p>
                 </div>
             </div>
@@ -63,14 +63,40 @@
             <!--main content -->
             <div class="container">
                 <div class="row">
-                  <div class="col">
-                    1 of 3
+                  <div class="col-md-4">
+                    <h3>About Academy Cinemas</h3>
+                    <img src="./images/pdx.jpg" class="img-fluid" alt=""/>
+                    <p>Located in the beautiful city of Portland, Oregon's Clam district</p>
+                    <p>We're totally not succumbing to the age of streaming platforms</p>
                   </div>
-                  <div class="col">
-                    2 of 3
+                  <div class="col-md-4">
+                    <h3>Accommodations</h3>
+                    <p>None of our accommodations are infested with peacocks!</p>
+                    <p>Relax, but not enough that you don't wish you were at home</p>
+                    <p>Our clams are kept at a balmy 72&deg; year-round and they hate it!</p>
                   </div>
-                  <div class="col">
-                    3 of 3
+                  <div class="col-md-4">
+                      <h3>Showtimes:</h3>
+                        <ul class="list-group">
+                          <li class="list-group-item">
+                            <a class="nav-link" href="#showtimes">Kong: Not Donkey</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a class="nav-link" href="#showtimes">Goats in the Shell</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a class="nav-link" href="#showtimes">Beauty and the Beets</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a class="nav-link" href="#showtimes">Life (Not the Cereal)</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a class="nav-link" href="#showtimes">Logang (2017)</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a class="nav-link" href="#showtimes">Power Ranchers</a>
+                          </li>
+                        </ul>
                   </div>
                 </div>
               </div>
