cards/showtimes edited

--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -36,7 +36,7 @@
                         </li>
             
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Showtimes</a>
+                          <a class="nav-link" href="#showtimes">Showtimes</a>
                         </li>
 
                         <li class="nav-item">
@@ -103,38 +103,93 @@
             <!--/main content -->
 
             <!--showtimes -->
-            <div class="card-group">
+            <div class="card-group" id="showtimes">
                 <div class="card">
-                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <img class="card-img-top" src="./images/kongskullisland.jpg" alt="Card image cap">
+                  <div class="card-block">
+                    <h5 class="card-title">Kong: Not Donkey</h5>
+                    <span class="badge badge-pill badge-info">4:00am</span>
+                    <span class="badge badge-pill badge-info">4:01am</span>
+                    <span class="badge badge-pill badge-info">4:02am</span>
+                    <span class="badge badge-pill badge-info">4:07am</span>
+                    <span class="badge badge-pill badge-info">4:08am</span>
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
                 </div>
                 <div class="card">
-                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <img class="card-img-top" src="./images/ghostintheshell.jpg" alt="Card image cap">
+                  <div class="card-block">
+                    <h5 class="card-title">Goats in the Shell</h5>
+                    <span class="badge badge-pill badge-info">4:00am</span>
+                    <span class="badge badge-pill badge-info">4:01am</span>
+                    <span class="badge badge-pill badge-info">4:02am</span>
+                    <span class="badge badge-pill badge-info">4:07am</span>
+                    <span class="badge badge-pill badge-info">4:08am</span>
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
                 </div>
                 <div class="card">
-                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <img class="card-img-top" src="./images/beautyandthebeast.jpg" alt="Card image cap">
+                  <div class="card-block">
+                    <h5 class="card-title">Beauty and the Beets</h5>
+                      <span class="badge badge-pill badge-info">4:00am</span>
+                      <span class="badge badge-pill badge-info">4:01am</span>
+                      <span class="badge badge-pill badge-info">4:02am</span>
+                      <span class="badge badge-pill badge-info">4:07am</span>
+                      <span class="badge badge-pill badge-info">4:08am</span>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card">
+                  <img class="card-img-top" src="./images/life.jpg" alt="Card image cap">
+                  <div class="card-block">
+                    <h5 class="card-title">Life (Not the Cereal)</h5>
+                    <span class="badge badge-pill badge-info">4:00am</span>
+                    <span class="badge badge-pill badge-info">4:01am</span>
+                    <span class="badge badge-pill badge-info">4:02am</span>
+                    <span class="badge badge-pill badge-info">4:07am</span>
+                    <span class="badge badge-pill badge-info">4:08am</span>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card">
+                  <img class="card-img-top" src="./images/logan.jpg" alt="Card image cap">
+                  <div class="card-block">
+                    <h5 class="card-title">Logang</h5>
+                    <span class="badge badge-pill badge-info">4:00am</span>
+                    <span class="badge badge-pill badge-info">4:01am</span>
+                    <span class="badge badge-pill badge-info">4:02am</span>
+                    <span class="badge badge-pill badge-info">4:07am</span>
+                    <span class="badge badge-pill badge-info">4:08am</span>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card">
+                  <img class="card-img-top" src="./images/powerrangers.jpg" alt="Card image cap">
+                  <div class="card-block">
+                    <h5 class="card-title">Power Ranchers</h5>
+                    <span class="badge badge-pill badge-info">4:00am</span>
+                    <span class="badge badge-pill badge-info">4:01am</span>
+                    <span class="badge badge-pill badge-info">4:02am</span>
+                    <span class="badge badge-pill badge-info">4:07am</span>
+                    <span class="badge badge-pill badge-info">4:08am</span>
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
                 </div>
               </div>
+              
             <!--/showtimes -->
 
 
