--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -192,6 +192,23 @@
               
             <!--/showtimes -->
 
+            <!--footer -->
+            <ul class="nav">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+              </ul>
+            <!--/footer -->
+
 
         </div>
         <!-- /Content here -->
