--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -195,16 +195,16 @@
             <!--footer -->
             <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
+                  <small><a class="nav-link active" href="#">Movie Rewards</a></small>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <small><a class="nav-link" href="#">Movies@news.org</a></small>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <small><a class="nav-link" href="#">Info@academycinemas.com</a></small>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
+                  <small><a class="nav-link disabled" href="#"> &copy;2018 Academy Cinemas&reg;</a></small>
                 </li>
               </ul>
             <!--/footer -->
