--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -192,6 +192,22 @@
               
             <!--/showtimes -->
 
+
+            
+            <!--sign up -->
+            <div class="container py-4 |text-center col-md-6">
+            <form>
+                <div class="form-group row">
+                  <h1 class="display-5 my-5 text-center text-primary">Let's Send More Garbage to Your Email!</h1>
+                  <div class="col-sm-12 text-center">
+                    <input type="email" class="form-control" id="colFormLabel" placeholder="you@example.com">
+                    <button type="button" class="btn btn-outline-primary mt-4">Sign Up!</button>
+                  </div>
+                </div>
+            </form>
+            </div>
+            <!--/sign up -->
+
             <!--footer -->
             <ul class="nav">
                 <li class="nav-item">
@@ -208,30 +224,6 @@
                 </li>
               </ul>
             <!--/footer -->
-
-            <!--sign up -->
-            <form>
-                <div class="form-group row">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control" id="colFormLabel" placeholder="col-form-label">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="col-form-label-lg">
-                  </div>
-                </div>
-              </form>
-            <!--/sign up -->
-
 
 
         </div>
