fixed navbar expansion issue

--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -20,7 +20,7 @@
         <div class="container">
             
             <!-- navbar -->
-            <nav class="navbar navbar-toggleable-lg fixed-top navbar-light" style="background-color: #e3f2fd;">
+            <nav class="navbar navbar-toggleable-lg navbar-expand-md fixed-top navbar-light" style="background-color: #e3f2fd;">
                     <a class="navbar-brand" href="#">
                         <img src="./images/movie_logo.gif" width="60" height="58" alt="">
                     </a>
