implemented more up to date fixes for formatting on various devices

--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="#deals">Deals</a>
                         </li>
                       </ul>
-                      <form class="form-inline my-2 my-lg-0">
+                      <form class="form-inline my-2 my-lg-0 d-none d-lg-block">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                       </form>
@@ -55,7 +55,7 @@
             <!--/navbar -->
 
             <!--jumbotron -->
-            <div class="jumbotron jumbotron-fluid text-center bg-info mt-4">
+            <div class="jumbotron jumbotron-fluid text-center bg-info mt-4 d-none d-lg-block">
                 <div class="container">
                   <h1 class="display-3">Academy Cinemas</h1>
                   <p class="lead">People Definitely Still Go to Movie Theaters</p>
@@ -64,21 +64,21 @@
             <!--/jumbotron -->
 
             <!--main content -->
-            <div class="container">
+            <div class="container my-5">
                 <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-4 pt-5">
                     <h3>About Academy Cinemas</h3>
                     <img src="./images/pdx.jpg" class="img-fluid" alt=""/>
                     <p>Located in the beautiful city of Portland, Oregon's Clam district</p>
                     <p>We're totally not succumbing to the age of streaming platforms</p>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 pt-5">
                     <h3>Accommodations</h3>
                     <p>None of our accommodations are infested with peacocks!</p>
                     <p>Relax, but not enough that you don't wish you were at home</p>
                     <p>Our clams are kept at a balmy 72&deg; year-round and they hate it!</p>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 pt-5">
                       <h3>Showtimes:</h3>
                         <ul class="list-group">
                           <li class="list-group-item">
