--- a/cinema/cinema.html
+++ b/cinema/cinema.html
@@ -149,6 +149,8 @@
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
                 </div>
+              </div>
+              <div class="card-group" id="showtimes">
                 <div class="card">
                   <img class="card-img-top" src="./images/life.jpg" alt="Card image cap">
                   <div class="card-block">
